--- a/base/public/inicioCliente.html
+++ b/base/public/inicioCliente.html
@@ -43,7 +43,7 @@
           </div>
           <div class="nav-container">
             <a href="listar_librerias.html" id="optionNavLibrerias">Librerias</a>
-            <a href="listar_sucursales.html" id="optionNavSucursales">Sucursales</a>
+            <a href="listar_sucursales_admin.html" id="optionNavSucursales">Sucursales</a>
             <a href="%20clubesLectura.html" id="optionNavClubes">Clubes de Lectura</a>
             <a href="listar_libros.html" id="optionNavLibros">Libros</a>
             <a href="listar-autores.html" id="optionNavAutores">Autores</a>
@@ -52,7 +52,8 @@
             <a href="listar_tarjetas.html">Tarjetas</a>
             <a href="#" id="optionIntercambio">Intercambios</a>
             <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
-            <a href="inventario_libreria.html" id = "optionNavInventario">Inventario</a>
+            <a href="inventario_general.html" id ="optionNavInventarioGeneral">Inventario General</a>
+            <a href="inventario_libreria.html" id = "optionNavInventarioLibreria">Inventario Libreria</a>
             <!--
               SOLO PARA PROBAR EL MODIFICAR CONTRASENNA
 
