--- a/base/public/listar_sucursales_admin.html
+++ b/base/public/listar_sucursales_admin.html
@@ -152,8 +152,9 @@
 
         <script src="js/jquery-3.3.1.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src = "js/servicio_librerias.js"></script>
         <script src="js/servicio_sucursales.js"></script>
-        <script src="js/controlador_listar_sucursales.js"></script>
+        <script src="js/controlador_listar_sucursalesAdmin.js"></script>
         <script src="js/getNombre.js"></script>
     
     </body>
