--- a/base/public/listar-autores.html
+++ b/base/public/listar-autores.html
@@ -57,6 +57,21 @@
                 </ul>
             </nav>
     <main>
+            <div id="myModal" class="modal">
+
+                    <!-- Modal content -->
+                    <div class="modal-content" id="signinpopup">
+        
+                        <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+                        <div class="optionProfile"><a href="">Mi Carrito</a></div>
+                        <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+                        <div class="optionProfile"><a href="">Mis compras</a></div>
+                        <div class="optionProfile"><a href="">Mis libros</a></div>
+                        <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                        <button id="btn_cerrar">Cerrar Sesión</button>
+                    </div>
+        
+                </div>
             <h1>Listar Autores</h1>
         <input type="text" id="txt_filtro" placeholder="Filtrar Nombre/Nacionalidad" style="width: 170px">
         <a href="registrar-autor.html"><button>Registrar Autor</button></a>
@@ -156,6 +171,7 @@
     <script src="js/controlador-listar-autores.js"></script>
     <script src="js/getNombre.js"></script>
     <script src="js/controlador_cerrar_sesion.js"></script>
+    <script src="js/clienteIniciado.js"></script>
 </body>
 
 </html>
