--- a/base/public/modificar_contrasenna.html
+++ b/base/public/modificar_contrasenna.html
@@ -53,7 +53,21 @@
   <body>
       <main>
 
+          <div id="myModal" class="modal">
 
+              <!-- Modal content -->
+              <div class="modal-content" id="signinpopup">
+  
+                  <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+                  <div class="optionProfile"><a href="">Mi Carrito</a></div>
+                  <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+                  <div class="optionProfile"><a href="">Mis compras</a></div>
+                  <div class="optionProfile"><a href="">Mis libros</a></div>
+                  <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                  <button id="btn_cerrar">Cerrar Sesión</button>
+              </div>
+  
+          </div>
         <h1>Modificar Contraseña</h1>
 
         <section id = "datos_contrasenna">
@@ -92,6 +106,8 @@
       <script src = "js/servicio_usuario.js"></script>
       <script src = "js/controlador_modificarContrasena.js"></script>
       <script src="js/controlador_cerrar_sesion.js"></script>
+      <script src="js/getNombre.js"></script>
+      <script src="js/clienteIniciado.js"></script>
 
 
 
