--- a/base/public/modificar_genero.html
+++ b/base/public/modificar_genero.html
@@ -55,7 +55,21 @@
             </li>
         </ul>
     </nav>
+    <div id="myModal" class="modal">
 
+        <!-- Modal content -->
+        <div class="modal-content" id="signinpopup">
+
+            <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+            <div class="optionProfile"><a href="">Mi Carrito</a></div>
+            <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+            <div class="optionProfile"><a href="">Mis compras</a></div>
+            <div class="optionProfile"><a href="">Mis libros</a></div>
+            <div class="optionProfile"><a href="">Mis intercambios</a></div>
+            <button id="btn_cerrar">Cerrar Sesión</button>
+        </div>
+
+    </div>
   <h1>Modificar Género</h1>
   <form action="">
     <div class="contenedor-inputs">
@@ -157,6 +171,7 @@
 <script src="js/getNombre.js"></script> 
 <script src="js/controlador_modificar_genero.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+<script src="js/clienteIniciado.js"></script>
 
 
 
