--- a/base/public/registrar_clubLectura.html
+++ b/base/public/registrar_clubLectura.html
@@ -66,7 +66,21 @@
 
     <main>
         
-    
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content" id="signinpopup">
+
+                <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+                <div class="optionProfile"><a href="">Mi Carrito</a></div>
+                <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+                <div class="optionProfile"><a href="">Mis compras</a></div>
+                <div class="optionProfile"><a href="">Mis libros</a></div>
+                <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                <button id="btn_cerrar">Cerrar Sesión</button>
+            </div>
+
+        </div>
     <div class="sign-in">
         <h1>Nuevo Club de Lectura</h1>
         <div class="line"></div>
@@ -150,7 +164,7 @@
    
     <script src="js/servicio_libro.js"></script>
     <script src="js/servicio_categoria.js"></script>
-
+    <script src="js/clienteIniciado.js"> </script>
     <script src="js/servicio_sucursales.js"></script>
 
 
