--- a/base/public/ver-perfil-autor.html
+++ b/base/public/ver-perfil-autor.html
@@ -58,6 +58,21 @@
 
    
     <main>
+            <div id="myModal" class="modal">
+
+                    <!-- Modal content -->
+                    <div class="modal-content" id="signinpopup">
+        
+                        <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+                        <div class="optionProfile"><a href="">Mi Carrito</a></div>
+                        <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+                        <div class="optionProfile"><a href="">Mis compras</a></div>
+                        <div class="optionProfile"><a href="">Mis libros</a></div>
+                        <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                        <button id="btn_cerrar">Cerrar Sesión</button>
+                    </div>
+        
+                </div>
         <h2>Autor <span id="txt_nombre"></span> </h2>
         <p><span id="foto"></span></p>
         <p>Nombre Artístico: <span id="txt_nombre_artistico"></span></p>
@@ -77,6 +92,8 @@
     <script src="js/servicio-autor.js"></script>
     <script src="js/controlador_perfil_autor.js"></script>
     <script src="js/getNombre.js"></script> 
+    <script src="js/clienteIniciado.js"></script>
+
 </body>
 
 </html>
