--- a/base/public/inventario_general.html
+++ b/base/public/inventario_general.html
@@ -73,7 +73,23 @@
 
     <main>
 
-        <h1>Invenrtario General</h1>
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content" id="signinpopup">
+
+                <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+                <div class="optionProfile"><a href="">Mi Carrito</a></div>
+                <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+                <div class="optionProfile"><a href="">Mis compras</a></div>
+                <div class="optionProfile"><a href="">Mis libros</a></div>
+                <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                <button id="btn_cerrar">Cerrar Sesión</button>
+            </div>
+
+        </div>
+
+        <h1>Inventario General</h1>
 
         <h2>Productos</h2>
 
@@ -156,7 +172,7 @@
     <script src="js/controlador_agregar_inventarioGeneral.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/getNombre.js"></script> 
-
+    <script src="js/clienteIniciado.js"></script>
 
 
   </body>
