--- a/base/public/listar_categoría.html
+++ b/base/public/listar_categoría.html
@@ -66,6 +66,21 @@
 
   <main>
 
+      <div id="myModal" class="modal">
+
+          <!-- Modal content -->
+          <div class="modal-content" id="signinpopup">
+
+              <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+              <div class="optionProfile"><a href="">Mi Carrito</a></div>
+              <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+              <div class="optionProfile"><a href="">Mis compras</a></div>
+              <div class="optionProfile"><a href="">Mis libros</a></div>
+              <div class="optionProfile"><a href="">Mis intercambios</a></div>
+              <button id="btn_cerrar">Cerrar Sesión</button>
+          </div>
+
+      </div>
     <h1>Listar Categorías</h1>
 
     <label for="txt_filtrar">Filtrar</label>
@@ -106,7 +121,7 @@
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="js/servicio_categoria.js"></script>
   <script src="js/controlador_listar_categorias.js"></script>
-
+  <script src="js/clienteIniciado.js"></script>
 
 </body>
 
