--- a/base/public/listar_genero.html
+++ b/base/public/listar_genero.html
@@ -62,6 +62,22 @@
 
   <main>
 
+      <div id="myModal" class="modal">
+
+          <!-- Modal content -->
+          <div class="modal-content" id="signinpopup">
+
+              <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+              <div class="optionProfile"><a href="">Mi Carrito</a></div>
+              <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+              <div class="optionProfile"><a href="">Mis compras</a></div>
+              <div class="optionProfile"><a href="">Mis libros</a></div>
+              <div class="optionProfile"><a href="">Mis intercambios</a></div>
+              <button id="btn_cerrar">Cerrar Sesión</button>
+          </div>
+
+      </div>
+
   <button type="button" class="btn-registrar-genero" id="btn-registrar-genero">Registrar Género</button>
 
   <div class="contenedor">
@@ -185,6 +201,7 @@
   <script src="js/controlador_listar_generos.js"></script>
   <script src="js/getNombre.js"></script>
   <script src="js/controlador_cerrar_sesion.js"></script>
+  <script src="js/clienteIniciado.js"></script>
 
 </body>
 
