--- a/base/public/listar_sucursales.html
+++ b/base/public/listar_sucursales.html
@@ -62,6 +62,21 @@
 
 
     <main>
+            <div id="myModal" class="modal">
+
+                    <!-- Modal content -->
+                    <div class="modal-content" id="signinpopup">
+        
+                        <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+                        <div class="optionProfile"><a href="">Mi Carrito</a></div>
+                        <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+                        <div class="optionProfile"><a href="">Mis compras</a></div>
+                        <div class="optionProfile"><a href="">Mis libros</a></div>
+                        <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                        <button id="btn_cerrar">Cerrar Sesión</button>
+                    </div>
+        
+                </div>
 
         <h1>Listar Sucursales</h1>
 
@@ -167,6 +182,7 @@
     <script src="js/servicio_sucursales.js"></script>
     <script src="js/controlador_listar_sucursales.js"></script>
     <script src="js/getNombre.js"></script>
+    <script src="js/clienteIniciado.js"></script>
 
 </body>
 
