--- a/base/public/modificar_autor.html
+++ b/base/public/modificar_autor.html
@@ -18,6 +18,21 @@
 
 <body>
     <main>
+            <div id="myModal" class="modal">
+
+                    <!-- Modal content -->
+                    <div class="modal-content" id="signinpopup">
+        
+                        <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+                        <div class="optionProfile"><a href="">Mi Carrito</a></div>
+                        <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+                        <div class="optionProfile"><a href="">Mis compras</a></div>
+                        <div class="optionProfile"><a href="">Mis libros</a></div>
+                        <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                        <button id="btn_cerrar">Cerrar Sesión</button>
+                    </div>
+        
+                </div>
             <header>
                     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
                     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
@@ -423,6 +438,7 @@
     <script src="js/controlador_modificar_autor.js "></script>
     <script src="js/getNombre.js"></script>
     <script src="js/controlador_cerrar_sesion.js"></script>
+    <script src="js/clienteIniciado.js"></script>
 
 </body>
 
