--- a/base/public/modificar_libro.html
+++ b/base/public/modificar_libro.html
@@ -59,6 +59,21 @@
     </nav>
 
   <main>
+      <div id="myModal" class="modal">
+
+          <!-- Modal content -->
+          <div class="modal-content" id="signinpopup">
+
+              <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+              <div class="optionProfile"><a href="">Mi Carrito</a></div>
+              <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+              <div class="optionProfile"><a href="">Mis compras</a></div>
+              <div class="optionProfile"><a href="">Mis libros</a></div>
+              <div class="optionProfile"><a href="">Mis intercambios</a></div>
+              <button id="btn_cerrar">Cerrar Sesión</button>
+          </div>
+
+      </div>
     <h1>Modificar Libro</h1>
 
 
@@ -170,7 +185,7 @@
   <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
   <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
   <script src="js/servicio_imagen.js"></script>
-
+<script src="js/clienteIniciado.js"></script>
 
 
 </body>
