--- a/base/public/modificar_sucursal.html
+++ b/base/public/modificar_sucursal.html
@@ -80,6 +80,21 @@
     </nav>
 
     <main>
+            <div id="myModal" class="modal">
+
+                    <!-- Modal content -->
+                    <div class="modal-content" id="signinpopup">
+        
+                        <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+                        <div class="optionProfile"><a href="">Mi Carrito</a></div>
+                        <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+                        <div class="optionProfile"><a href="">Mis compras</a></div>
+                        <div class="optionProfile"><a href="">Mis libros</a></div>
+                        <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                        <button id="btn_cerrar">Cerrar Sesión</button>
+                    </div>
+        
+                </div>
 
         <h1>Modificar Sucursal</h1>
 
@@ -198,7 +213,8 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/servicio_sucursales.js"></script>
     <script src="js/controlador_modificar_sucursal.js"></script>
-    <script src="js/getNombre.js"></script> 
+    <script src="js/getNombre.js"></script>
+    <script src="js/clienteIniciado.js"></script> 
 
 </body>
 
