--- a/base/public/modificar_tarjeta.html
+++ b/base/public/modificar_tarjeta.html
@@ -55,6 +55,22 @@
             </li>
         </ul>
     </nav>
+
+    <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content" id="signinpopup">
+
+                <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+                <div class="optionProfile"><a href="">Mi Carrito</a></div>
+                <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+                <div class="optionProfile"><a href="">Mis compras</a></div>
+                <div class="optionProfile"><a href="">Mis libros</a></div>
+                <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                <button id="btn_cerrar">Cerrar Sesión</button>
+            </div>
+
+        </div>
     <h1>Modificar Tarjeta</h1>
     <form action="">
         <div class="contenedor-inputs">
@@ -168,7 +184,7 @@
 
 <!-- script controlador -->
 <script src="js/servicio_tarjeta.js"></script>
-
+<script src="js/clienteIniciado.js"></script>
 <script src="js/controlador_cerrar_sesion.js"></script>
 <script src="js/controlador_modificar_tarjeta.js"></script>
 <script src="js/getNombre.js"></script>
