--- a/base/public/registrar-autor.html
+++ b/base/public/registrar-autor.html
@@ -61,7 +61,21 @@
                 </ul>
             </nav>
     <main>
+            <div id="myModal" class="modal">
 
+                    <!-- Modal content -->
+                    <div class="modal-content" id="signinpopup">
+        
+                        <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+                        <div class="optionProfile"><a href="">Mi Carrito</a></div>
+                        <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+                        <div class="optionProfile"><a href="">Mis compras</a></div>
+                        <div class="optionProfile"><a href="">Mis libros</a></div>
+                        <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                        <button id="btn_cerrar">Cerrar Sesión</button>
+                    </div>
+        
+                </div>
         <h1>Registrar Autor</h1>
 
         <section id="datos_autor1">
@@ -357,6 +371,7 @@
     <script src="js/controlador-autor.js "></script>
     <script src="js/getNombre.js"></script>
     <script src="js/controlador_cerrar_sesion.js"></script>
+    <script src="js/clienteIniciado.js"></script>
 
 </body>
 
