--- a/base/public/registrar_cliente.html
+++ b/base/public/registrar_cliente.html
@@ -64,7 +64,21 @@
       </nav>
 
     <main>
+            <div id="myModal" class="modal">
 
+                    <!-- Modal content -->
+                    <div class="modal-content" id="signinpopup">
+        
+                        <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+                        <div class="optionProfile"><a href="">Mi Carrito</a></div>
+                        <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+                        <div class="optionProfile"><a href="">Mis compras</a></div>
+                        <div class="optionProfile"><a href="">Mis libros</a></div>
+                        <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                        <button id="btn_cerrar">Cerrar Sesión</button>
+                    </div>
+        
+                </div>
         <h1>Registar </h1>
 
 
@@ -133,7 +147,7 @@
 
     </main>
 
-
+    <script src="js/clienteIniciado.js"></script>
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/getNombre.js"></script> 
     <script src="js/stringProvincias.js"></script>
