--- a/base/public/registrar_inventario_libreria.html
+++ b/base/public/registrar_inventario_libreria.html
@@ -68,6 +68,21 @@
       </nav>
 
     <main>
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content" id="signinpopup">
+
+                <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+                <div class="optionProfile"><a href="">Mi Carrito</a></div>
+                <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+                <div class="optionProfile"><a href="">Mis compras</a></div>
+                <div class="optionProfile"><a href="">Mis libros</a></div>
+                <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                <button id="btn_cerrar">Cerrar Sesión</button>
+            </div>
+
+        </div>
 
         <h1>Invenrtario de Barnes & Noble</h1>
 
@@ -151,6 +166,7 @@
     <script src="js/controlador_registrar_inventarioLibreria.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/getNombre.js"></script> 
+    <script src="js/clienteIniciado.js"></script>
 
 
 
