--- a/base/public/registrar_libreria.html
+++ b/base/public/registrar_libreria.html
@@ -57,6 +57,22 @@
 
     <main>
 
+            <div id="myModal" class="modal">
+
+                    <!-- Modal content -->
+                    <div class="modal-content" id="signinpopup">
+        
+                        <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+                        <div class="optionProfile"><a href="">Mi Carrito</a></div>
+                        <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+                        <div class="optionProfile"><a href="">Mis compras</a></div>
+                        <div class="optionProfile"><a href="">Mis libros</a></div>
+                        <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                        <button id="btn_cerrar">Cerrar Sesión</button>
+                    </div>
+        
+                </div>
+
         <h1>Registrar Librería</h1>
 
         <section id="datos_libreria">
@@ -172,7 +188,7 @@
     <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
     <script src="js/servicio_avatar.js"></script>
     <script src="js/getNombre.js"></script> 
-
+    <script src="js/clienteIniciado.js"></script>
 </body>
 
 </html>
