--- a/base/public/ver_perfil_libro.html
+++ b/base/public/ver_perfil_libro.html
@@ -55,6 +55,21 @@
             </li>
         </ul>
     </nav>
+    <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content" id="signinpopup">
+
+            <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+            <div class="optionProfile"><a href="">Mi Carrito</a></div>
+            <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+            <div class="optionProfile"><a href="">Mis compras</a></div>
+            <div class="optionProfile"><a href="">Mis libros</a></div>
+            <div class="optionProfile"><a href="">Mis intercambios</a></div>
+            <button id="btn_cerrar">Cerrar Sesión</button>
+        </div>
+
+    </div>
 
   <div class="contenedor-perfil">
 
@@ -193,5 +208,6 @@
   <script src="js/controlador_perfil_libro.js"></script>
   <script src="js/getNombre.js"></script>
   <script src="js/controlador_cerrar_sesion.js"></script>
+  <script src="js/clienteIniciado.js"></script>
 
 </html>
