--- a/base/public/visualizarperfil_admingeneral.html
+++ b/base/public/visualizarperfil_admingeneral.html
@@ -59,7 +59,21 @@
         </ul>
     </nav>
 
+    <div id="myModal" class="modal">
 
+            <!-- Modal content -->
+            <div class="modal-content" id="signinpopup">
+
+                <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
+                <div class="optionProfile"><a href="">Mi Carrito</a></div>
+                <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
+                <div class="optionProfile"><a href="">Mis compras</a></div>
+                <div class="optionProfile"><a href="">Mis libros</a></div>
+                <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                <button id="btn_cerrar">Cerrar Sesión</button>
+            </div>
+
+        </div>
         <div class="izquierda">
 
                 <img src="imgs/pandauser.png" alt="" width="200px">
@@ -92,6 +106,7 @@
     <script src="js/controlador_visualizaradmingeneral.js"></script>
     <script src="js/controlador_cerrar_sesion.js"></script>
     <script src="js/getNombre.js"></script> 
+    <script src="js/clienteIniciado.js"></script>
   </body>
 
 </html>
