--- a/base/public/listar_sucursales.html
+++ b/base/public/listar_sucursales.html
@@ -67,6 +67,8 @@
                     <th>Correo</th>
                     <th>Dirección</th>
                     <th>Editar</th>
+                    <th>Estado</th>
+                    <th>Eliminar</th>
                     <th>A / D</th>
                     <th></th>
                 </tr>
