--- a/base/public/listar_categoría.html
+++ b/base/public/listar_categoría.html
@@ -86,6 +86,7 @@
   <script src="js/jquery-3.3.1.js"></script>
   <script src="js/getNombre.js"></script>
   <script src="js/controlador_cerrar_sesion.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="js/servicio_categoria.js"></script>
   <script src="js/controlador_listar_categorias.js"></script>
