--- a/base/public/ clubesLectura.html
+++ b/base/public/ clubesLectura.html
@@ -120,7 +120,8 @@
     <script src="js/controlador_miembros_club.js"></script>
     <script src="js/getNombre.js"></script> 
     <script src="js/clienteIniciado.js"></script>
-
+    <script src="js/controlador_cerrar_sesion.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 
 
 
