select librerias/sucursales

--- a/base/public/crear_contrasenna.html
+++ b/base/public/crear_contrasenna.html
@@ -30,26 +30,30 @@
 
           <div>
 
-              <input id="txt_pin"  type="text"  placeholder = "Digite el pin brindado" >
+              <input id="txt_pin"  type="password"  placeholder = "Digite el pin brindado" >
 
           </div>
 
           <div>
 
-              <input id="txt_contrasenna"  type="text"  placeholder = "Digite su nueva Contraseña" >
+              <input id="txt_contrasenna"  type="password"  placeholder = "Digite su nueva Contraseña" >
 
 
           </div>
 
           <div>
 
-              <input id="txt_verificacion"  type="text"  placeholder = "Digite nuvamente la Contraseña" >
+              <input id="txt_verificacion"  type="password"  placeholder = "Digite nuvamente la Contraseña" >
 
 
           </div>
 
 
         </section>
+
+        <div id="rellene">
+            <p>Por favor revise los espacios en rojo e intente de nuevo</p>
+        </div>
 
         <button type ="button" class ="boton_crear" id="btn_crear_contrasenna">Registrar</button>
       </main>
