--- a/base/public/modificar_contrasenna.html
+++ b/base/public/modificar_contrasenna.html
@@ -33,7 +33,7 @@
           <a href="listar_genero.html" id="optionNavGenero">Géneros</a>
           <a href="listar_categoría.html" id="optionNavCategoria">Categoria</a>
           <a href="listar_tarjetas.html">Tarjetas</a>
-          <a href="#" id="optionIntercambio">Intercambios</a>
+          <a href="intercambios.html" id="optionIntercambio">Intercambios</a>
           <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
         </div>
         <div class="optionsNav">
