--- a/base/public/registrar-autor.html
+++ b/base/public/registrar-autor.html
@@ -82,7 +82,7 @@
 
                     <li class="parent" id="dropdown"><a href="#">Otros</a>
                         <ul class="child">
-                            <li><a href="#">Intercambios</a></li>
+                            <li><a href="intercambios.html">Intercambios</a></li>
                             <li id='optionUsers'><a href="listar-usuarios.html">Usuarios</a></li>
                             <li id='optionBitacora'><a href="#">Bitácora</a></li>
                             <li id='optionReportes'><a href="#">Reportes</a></li>
