--- a/base/public/modificar_libreria.html
+++ b/base/public/modificar_libreria.html
@@ -107,6 +107,7 @@
     <script src="js/servicio_librerias.js"></script>
     <script src="js/servicio_usuario.js"></script>
     <script src="js/controlador_registrar_libreria.js"></script>
+    <script src="js/servicio_bitacora.js"></script>
 
     <!-- <script src="js/controlador_cerrar_sesion.js"></script> -->
     <!-- <script src="js/notSignedIn.js"></script> -->
