--- a/base/public/inventario_general.html
+++ b/base/public/inventario_general.html
@@ -164,7 +164,7 @@
 
 
     <script src="js/getNombre.js"></script>
-      
+    <script src="js/jquery-3.3.1.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/servicio_inventarioGeneral.js"></script> 
     <script src="js/servicio_libro.js"></script>   
