--- a/base/public/registrar_cliente.html
+++ b/base/public/registrar_cliente.html
@@ -53,7 +53,7 @@
   
               <li class="parent" id="dropdown"><a href="#">Otros</a>
                   <ul class="child">
-                      <li><a href="#">Intercambios</a></li>
+                      <li id='optionIntercambios'><a href="#">Intercambios</a></li>
                       <li id='optionUsers'><a href="listar-usuarios.html">Usuarios</a></li>
                       <li id='optionBitacora'><a href="#">Bitácora</a></li>
                       <li id='optionReportes'><a href="#">Reportes</a></li>
@@ -156,6 +156,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/servicio_usuario.js"></script>
     <script src="js/controlador_registrar_usuario.js"></script>
+    <script src="js/servicio_bitacora.js"></script>
 
     <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
     <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
