--- a/base/public/registrar_clubLectura.html
+++ b/base/public/registrar_clubLectura.html
@@ -154,6 +154,7 @@
 
     <script src="js/jquery-3.3.1.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 
     <script src="js/servicio_librerias.js"></script>
     <script src="js/servicio_chat.js"></script>
@@ -163,6 +164,7 @@
     <script src="js/servicio_libro.js"></script>
     <script src="js/servicio_categoria.js"></script>
     <script src="js/servicio_sucursales.js"></script>
+  
 
     <script src="js/controlador-clubLectura.js"></script>
     <script src="js/clienteIniciado.js"> </script>
