--- a/base/public/registrar_libreria.html
+++ b/base/public/registrar_libreria.html
@@ -97,10 +97,9 @@
 
             <div class="mapa">
 
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3930.1915192287242!2d-84.04903608571853!3d9.918001777163246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e397932ca451%3A0xef8088362eda931!2sMultiplaza+Curridabat!5e0!3m2!1ses-419!2scr!4v1562653229172!5m2!1ses-419!2scr"
-                    width="600" height="450" frameborder="0" style="border:0" allowfullscreen>
-                </iframe>
+                <div id="map">
+
+                </div>
 
             </div>
 
@@ -191,6 +190,9 @@
 
     <script src="js/stringProvincias.js"></script>
     <script src="js/ubicacion.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCb9bx2gVqXRsr4OEeUnMErqARyRFSADmE&callback=initMap"
+        async defer></script>
+    <script src="js/map.js"></script>
 
     <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js'
         type='text/javascript'></script>
