--- a/base/public/misintercambios.html
+++ b/base/public/misintercambios.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Intercambios</title>
+    <title>Mis Intercambios</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/listar_libros.css">
     <link rel="stylesheet" href="css/fix-libros.css">
@@ -76,9 +76,9 @@
                     </div>
         
                 </div>
-        <h1>Libros Intercambiables</h1>
+        <h1>Mis Intercambios</h1>
 
-        <div class=""> <a href="misintercambios.html">Mis Intercambios</a></div>
+        <div class=""> <a href="solicitudes.html">Solicitudes de Intercambio</a></div>
 
         <label for="txt_filtro">Buscar</label>
         <input type="text" id="txt_filtro">
