--- a/base/public/solicitudes.html
+++ b/base/public/solicitudes.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Intercambios</title>
+    <title>Solicitudes de Intercambio</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/listar_libros.css">
     <link rel="stylesheet" href="css/fix-libros.css">
@@ -76,14 +76,8 @@
                     </div>
         
                 </div>
-        <h1>Libros Intercambiables</h1>
-
-        <div class=""> <a href="misintercambios.html">Mis Intercambios</a></div>
-
-        <label for="txt_filtro">Buscar</label>
-        <input type="text" id="txt_filtro">
+        <h1>Solicitudes</h1>
         
-
         <table id="tbl_libros">
             <thead>
                 <tr>
@@ -92,7 +86,10 @@
                     <th>Edición</th>
                     <th>Género</th>
                     <th>Año de edición</th>
-                    <th>Intercambio</th>
+                    <th></th>
+                    <th></th>
+
+
                 </tr>
             </thead>
             <tbody>
@@ -178,7 +175,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/controlador_cerrar_sesion.js"></script>
     <script src="js/servicio_libro.js"></script>
-    <script src="js/controlador_listar_libros_intercambiables.js"></script>
+    <script src="js/controlador_solicitudes.js"></script>
     <script src="js/clienteIniciado.js"></script>
    
 </body>
