--- a/base/public/listar_libros_intercambiables.html
+++ b/base/public/listar_libros_intercambiables.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Intercambios</title>
+    <title>Listar Libros Intercambiables</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/listar_libros.css">
     <link rel="stylesheet" href="css/fix-libros.css">
