--- a/base/public/listar_genero.html
+++ b/base/public/listar_genero.html
@@ -91,7 +91,7 @@
 
             <div>
               <label for="">Género</label>
-              <input type='text' id="txt-genero">
+              <input type='text' id="txt-genero" autocomplete="off">
             </div>
           </div>
 
