--- a/base/public/listar_librerias.html
+++ b/base/public/listar_librerias.html
@@ -117,7 +117,7 @@
                         <li class="uhead"><a href="">Librerías</a></li>
                         <ul>
                             <li><a href="">Ver las librerías</a></li>
-                            <li><a href="">Registrar mi librería</a></li>
+                            <li><a href="registrar_libreria.html">Registrar mi librería</a></li>
                             <li><a href="">Sucursales</a></li>
                             <li><a href="">Ofertas</a></li>
                         </ul>
