Listar libros cards
listar libros....pero con cards

--- a/base/public/listar-usuarios.html
+++ b/base/public/listar-usuarios.html
@@ -75,8 +75,7 @@
     <h1>Listar Usuarios</h1>
 
     <label for="">Filtrar</label>
-    <input type="text" id="txt_filtro"
-    >
+    <input type="text" id="txt_filtro">
     <a href="registrar_cliente.html">Registrar Usuario</a>
     <table id="tbl-usuarios">
       <thead>
