--- a/base/public/listar-autores.html
+++ b/base/public/listar-autores.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Autores</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/listar_autores.css">
     <link rel="stylesheet" href="css/navbar.css">
@@ -84,6 +84,7 @@
                     <th>Nacionalidad</th>
                     <th>Ver perfil</th>
                     <th>Editar</th>
+                    <th>Estado</th>
                     <th>Eliminar</th>
                 </tr>
             </thead>
