--- a/base/public/modificar_libro.html
+++ b/base/public/modificar_libro.html
@@ -108,17 +108,20 @@
             </div>
             <div id="lista_autores" class="listas">
               <label for="txt_autor">Autor:</label>
-              <select name="autor" id="txt_autor">
+              <select name="autor" id="slt_autor">
                 <!-- <option value=""></option> -->
                 <!-- <option>Autor 1</option>
                   <option>Autor 2</option>
                   <option>Autor 3</option> -->
               <!-- </select> -->
+              </select>
             </div>
+            
             <div>
               <label for="txt_anno_edicion">Año de edición:</label>
               <input id="txt_anno_edicion" type="number">
             </div>
+
             <div>
               <label for="idioma">Idioma:</label>
               <select name="idioma" id="txt_idioma">
