Registrar Librería con admin librería FUNCIONA

--- a/base/public/registrar_libreria.html
+++ b/base/public/registrar_libreria.html
@@ -111,9 +111,10 @@
 
             <div class="subir_avatar">
                 <figure class="avatar">
-                    <img src="imgs/img_avatar.jpg" alt="Seleccionar imagen" id="img_avatar">
+                    <img src="imgs/img_avatar.jpg" alt="Seleccionar imagen" id="img_avatar_admin_libreria">
                 </figure>
-                <button type="button" id="btn_seleccionar_avatar" class="boton_subir_avatar">Subir imagen </button>
+                <button type="button" id="btn_seleccionar_avatar_admin_libreria" class="boton_subir_avatar">Subir imagen
+                </button>
             </div>
 
             <label for="txt_identificacion">Identificación</label>
@@ -200,6 +201,9 @@
         type='text/javascript'></script>
     <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
     <script src="js/servicio_avatar.js"></script>
+
+
+
     <script src="js/getNombre.js"></script>
     <script src="js/clienteIniciado.js"></script>
 </body>
