--- a/base/public/listar_sucursales.html
+++ b/base/public/listar_sucursales.html
@@ -194,6 +194,7 @@
 
     <script src="js/getNombre.js"></script>
     <script src="js/clienteIniciado.js"></script>
+    <script src="js/controlador_cerrar_sesion.js"></script>
 
 </body>
 
