css autores y libros
para que se vea mas bonita la cosa

--- a/base/public/listar-autores.html
+++ b/base/public/listar-autores.html
@@ -73,7 +73,8 @@
         
                 </div>
             <h1>Listar Autores</h1>
-        <input type="text" id="txt_filtro" placeholder="Filtrar Nombre/Nacionalidad" style="width: 170px">
+            <label for="">Filtrar</label>
+        <input type="text" id="txt_filtro">
         <a href="registrar-autor.html"><button>Registrar Autor</button></a>
         <center>
         <table id="tbl-autores">
