--- a/base/public/intercambios.html
+++ b/base/public/intercambios.html
@@ -80,6 +80,9 @@
 
         <div class=""> <a href="misintercambios.html">Mis Intercambios</a></div>
 
+        <div class=""> <a href="solicitudes.html">Solicitudes de Intercambio</a></div>
+
+
         <label for="txt_filtro">Buscar</label>
         <input type="text" id="txt_filtro">
         
