--- a/base/public/inicioCliente.html
+++ b/base/public/inicioCliente.html
@@ -42,8 +42,8 @@
                 alt="" width="40px"></a>
           </div>
           <div class="nav-container">
-            <a href="listar_librerias.html" id="optionNavLibrerias">Librerias</a>
-            <a href="listar_sucursales_admin.html" id="optionNavSucursales">Sucursales</a>
+            <a href="listar_librerias_cliente.html" id="optionNavLibrerias">Librerias</a>
+            <a href="listar_sucursalesAdmin.html" id="optionNavSucursales">Sucursales</a>
             <a href="%20clubesLectura.html" id="optionNavClubes">Clubes de Lectura</a>
             <a href="listar_libros.html" id="optionNavLibros">Libros</a>
             <a href="listar-autores.html" id="optionNavAutores">Autores</a>
@@ -54,6 +54,7 @@
             <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
             <a href="inventario_general.html" id ="optionNavInventarioGeneral">Inventario General</a>
             <a href="inventario_libreria.html" id = "optionNavInventarioLibreria">Inventario Libreria</a>
+            <a href="carrito.html" id = "optionNavCarrito">Carrito</a>
             <!--
               SOLO PARA PROBAR EL MODIFICAR CONTRASENNA
 
