--- a/base/public/editar-usuario.html
+++ b/base/public/editar-usuario.html
@@ -112,7 +112,7 @@
                         <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
                         <div class="optionProfile"><a href="">Mis compras</a></div>
                         <div class="optionProfile"><a href="">Mis libros</a></div>
-                        <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                        <div class="optionProfile"><a href="misintercambios.html">Mis intercambios</a></div>
                         <button id="btn_cerrar">Cerrar Sesión</button>
                     </div>
         
