--- a/base/public/misintercambios.html
+++ b/base/public/misintercambios.html
@@ -48,7 +48,7 @@
         
                     <li class="parent" id="dropdown"><a href="#">Otros</a>
                         <ul class="child">
-                            <li><a href="intercambios.html">Intercambios</a></li>
+                            <li><a href="listar_libros_intercambiables.html">Intercambios</a></li>
                             <li id='optionUsers'><a href="#">Usuarios</a></li>
                             <li id='optionBitacora'><a href="#">Bitácora</a></li>
                             <li id='optionReportes'><a href="#">Reportes</a></li>
@@ -71,14 +71,13 @@
                         <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
                         <div class="optionProfile"><a href="">Mis compras</a></div>
                         <div class="optionProfile"><a href="">Mis libros</a></div>
-                        <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                        <div class="optionProfile"><a href="misintercambios.html">Mis intercambios</a></div>
                         <button id="btn_cerrar">Cerrar Sesión</button>
                     </div>
         
                 </div>
         <h1>Mis Intercambios</h1>
 
-        <div class=""> <a href="solicitudes.html">Solicitudes de Intercambio</a></div>
 
         <label for="txt_filtro">Buscar</label>
         <input type="text" id="txt_filtro">
