--- a/base/public/modificar_autor.html
+++ b/base/public/modificar_autor.html
@@ -35,7 +35,7 @@
             <a href="listar_genero.html" id="optionNavGenero">Géneros</a>
             <a href="listar_categoría.html" id="optionNavCategoria">Categoria</a>
             <a href="listar_tarjetas.html">Tarjetas</a>
-            <a href="#" id="optionIntercambio">Intercambios</a>
+            <a href="listar_libros_intercambiables.html" id="optionIntercambio">Intercambios</a>
             <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
         </div>
         <div class="optionsNav">
@@ -65,7 +65,7 @@
                         <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
                         <div class="optionProfile"><a href="">Mis compras</a></div>
                         <div class="optionProfile"><a href="">Mis libros</a></div>
-                        <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                        <div class="optionProfile"><a href="misintercambios.html">Mis intercambios</a></div>
                         <button id="btn_cerrar">Cerrar Sesión</button>
                     </div>
 
