--- a/base/public/modificar_libreria.html
+++ b/base/public/modificar_libreria.html
@@ -66,7 +66,7 @@
 
             <li class="parent" id="dropdown"><a href="#">Otros</a>
                 <ul class="child">
-                    <li><a href="#">Intercambios</a></li>
+                    <li><a href="listar_libros_intercambiables.html">Intercambios</a></li>
                     <li id='optionUsers'><a href="listar-usuarios.html">Usuarios</a></li>
                     <li id='optionBitacora'><a href="#">Bitácora</a></li>
                     <li id='optionReportes'><a href="#">Reportes</a></li>
@@ -87,7 +87,7 @@
                 <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
                 <div class="optionProfile"><a href="">Mis compras</a></div>
                 <div class="optionProfile"><a href="">Mis libros</a></div>
-                <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                <div class="optionProfile"><a href="misintercambios.html">Mis intercambios</a></div>
                 <button id="btn_cerrar">Cerrar Sesión</button>
             </div>
 
