--- a/base/public/inventario_libreria.html
+++ b/base/public/inventario_libreria.html
@@ -77,7 +77,7 @@
                         <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
                         <div class="optionProfile"><a href="">Mis compras</a></div>
                         <div class="optionProfile"><a href="">Mis libros</a></div>
-                        <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                        <div class="optionProfile"><a href="listar_libros_intercambiables.html">Mis intercambios</a></div>
                         <button id="btn_cerrar">Cerrar Sesión</button>
                     </div>
         
