--- a/base/public/solicitudes.html
+++ b/base/public/solicitudes.html
@@ -48,7 +48,7 @@
         
                     <li class="parent" id="dropdown"><a href="#">Otros</a>
                         <ul class="child">
-                            <li><a href="intercambios.html">Intercambios</a></li>
+                            <li><a href="listar_libros_intercambiables.html">Intercambios</a></li>
                             <li id='optionUsers'><a href="#">Usuarios</a></li>
                             <li id='optionBitacora'><a href="#">Bitácora</a></li>
                             <li id='optionReportes'><a href="#">Reportes</a></li>
@@ -71,7 +71,7 @@
                         <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
                         <div class="optionProfile"><a href="">Mis compras</a></div>
                         <div class="optionProfile"><a href="">Mis libros</a></div>
-                        <div class="optionProfile"><a href="">Mis intercambios</a></div>
+                        <div class="optionProfile"><a href="misintercambios.html">Mis intercambios</a></div>
                         <button id="btn_cerrar">Cerrar Sesión</button>
                     </div>
         
@@ -174,8 +174,9 @@
     <script src="js/getNombre.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/controlador_cerrar_sesion.js"></script>
+    <script src="js/controlador_solicitar_intercambio.js"></script>
+    <script src="js/controlador_listar_solicitudes.js"></script>
     <script src="js/servicio_libro.js"></script>
-    <script src="js/controlador_solicitudes.js"></script>
     <script src="js/clienteIniciado.js"></script>
    
 </body>
