--- a/base/public/editar-usuario.html
+++ b/base/public/editar-usuario.html
@@ -89,7 +89,7 @@
   
               <li class="parent" id="dropdown"><a href="#">Otros</a>
                   <ul class="child">
-                      <li><a href="intercambios.html">Intercambios</a></li>
+                      <li><a href="listar_libros_intercambiables.html">Intercambios</a></li>
                       <li id='optionUsers'><a href="#">Usuarios</a></li>
                       <li id='optionBitacora'><a href="#">Bitácora</a></li>
                       <li id='optionReportes'><a href="#">Reportes</a></li>
