--- a/base/public/listar_libros_intercambiables.html
+++ b/base/public/listar_libros_intercambiables.html
@@ -78,7 +78,7 @@
                 </div>
         <h1>Libros Intercambiables</h1>
 
-        <div class=""> <a href="listar_libros_intercambiables.html">Mis Intercambios</a></div>
+        <div class=""> <a href="misintercambios.html">Mis Intercambios</a></div>
 
         <div class=""> <a href="solicitudes.html">Solicitudes de Intercambio</a></div>
 
