--- a/base/public/visualizar_perfil_libreria.html
+++ b/base/public/visualizar_perfil_libreria.html
@@ -244,8 +244,12 @@
     <script src="js/servicio_img_prevista.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/getNombre.js"></script>
+    <script src="js/controlador_suscribirse_sucursal.js"></script>
+    <script src="js/servicio_usuario.js"></script>
+    <script src="js/servicio-clubLectura.js"></script>
+    <script src="js/servicio_oferta.js"></script>
 
-    <script src="js/getNombre.js"></script> 
+  
     <script src="js/clienteIniciado.js"></script>
 
 
