--- a/base/public/listar_libros_intercambiables.html
+++ b/base/public/listar_libros_intercambiables.html
@@ -180,7 +180,8 @@
     <script src="js/getNombre.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/controlador_cerrar_sesion.js"></script>
-    <script src="js/servicio_libro.js"></script>
+    <script src="js/servicio_intercambios.js"></script>
+    <script src="js/servicio_librosComprados.js"></script>
     <script src="js/controlador_listar_libros_intercambiables.js"></script>
     <script src="js/clienteIniciado.js"></script>
    
