--- a/base/public/index.html
+++ b/base/public/index.html
@@ -44,6 +44,7 @@
             <h1>Vienes buscando un libro y te vas siendo parte de una<span> familia </span>!</h1>
             <a href="registrar_cliente.html">Registrarme</a>
             <button id="iniciar_sesion_banner"> Iniciar Sesión </button>
+            <button id="iniciar_sesion_banner"> Iniciar Sesión </button>
         </div>
     </section>
 
