Libros Comprados Cards

--- a/base/public/inicioCliente.html
+++ b/base/public/inicioCliente.html
@@ -41,7 +41,7 @@
                 <ul class="child">
                     <li id="optionGeneros"><a id="refGeneros" href="listar_genero.html">Géneros</a></li>
                     <li id="optionCategorias"><a href="listar_categoría.html">Categorías</a></li>
-                    <li id="optionMisLibros"><a href="listar_librosComprados.html">Mis Libros</a></li>
+                    <li id="optionMisLibros"><a href="listar_libros_comprados_cards.html">Mis Libros</a></li>
                 </ul>
             </li>
             <li class="parent"><a href="listar_librerias.html" id="optionlibrerias">Librerías</a>
