--- a/base/public/listar_sucursalesAdmin.html
+++ b/base/public/listar_sucursalesAdmin.html
@@ -36,10 +36,11 @@
                     <li><a href="#">Ofertas</a></li>
                 </ul>
             </li>
-            <li class="parent" id="dropdown"><a href="#">Libros</a>
+            <li class="parent" id="dropdown"><a href="listar_libros.html">Libros</a>
                 <ul class="child">
                     <li><a href="#">Géneros</a></li>
                     <li><a href="#">Categorías</a></li>
+                    <li><a href="#">Autores</a></li>
                 </ul>
             </li>
             <li class="parent" id="dropdown"><a href="#">Clubes de Lectura</a>
