--- a/base/public/ratinguser.html
+++ b/base/public/ratinguser.html
@@ -12,7 +12,7 @@
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/rating_user.css">
+  
     <link rel="stylesheet" href="css/navbar.css">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -77,6 +77,9 @@
 
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/controlador_rating_user.js"></script>
+    <script src="js/servicio_rating_usuario.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 </body>
 
 </html>
