--- a/base/public/index.html
+++ b/base/public/index.html
@@ -43,7 +43,7 @@
         <div class="bannerContent">
             <h1>Vienes buscando un libro y te vas siendo parte de una<span> familia </span>!</h1>
             <a href="registrar_cliente.html">Registrarme</a>
-            <button id="iniciar_sesion_banner"> Iniciar Sesión </button>
+            <a href="registrar_libreria.html">Registrar mi Librería</a>
             <button id="iniciar_sesion_banner"> Iniciar Sesión </button>
         </div>
     </section>
@@ -199,7 +199,7 @@
 
 
     <section id="ofertas">
-        <h1>Ofertas </h1>
+        
 
     </section>
 
