--- a/base/public/listar_librerias_cliente.html
+++ b/base/public/listar_librerias_cliente.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Listar Librerías 2</title>
+        <title>Listar Librerías </title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/listar_librerias.css">
         <link rel="stylesheet" href="css/navbar.css">
