--- a/base/public/inicioCliente.html
+++ b/base/public/inicioCliente.html
@@ -42,6 +42,7 @@
                     <li id="optionGeneros"><a id="refGeneros" href="listar_genero.html">Géneros</a></li>
                     <li id="optionCategorias"><a href="listar_categoría.html">Categorías</a></li>
                     <li id="optionMisLibros"><a href="listar_librosComprados.html">Mis Libros</a></li>
+                    <li id="optionAutores"><a href="listar-autores.html"></a></li>
                 </ul>
             </li>
             <li class="parent"><a href="listar_librerias.html" id="optionlibrerias">Librerías</a>
@@ -56,11 +57,11 @@
 
             <li class="parent" id="dropdown"><a href="#">Otros</a>
                 <ul class="child">
-                    <li><a href="listar_libros_intercambiables.html">Intercambios</a></li>
+                    <li id='optionIntercambio'><a href="listar_libros_intercambiables.html">Intercambios</a></li>
                     <li id='optionUsers'><a href="#">Usuarios</a></li>
-                    <li id='optionBitacora'><a href="#">Bitácora</a></li>
+                    <li id='optionBitacora'><a href="listar_bitacora.html">Bitácora</a></li>
                     <li id='optionReportes'><a href="#">Reportes</a></li>
-                    <li id='optionInventario'><a href="#">Inventario</a></li>
+                    <li ><a href="inventario_general.html" id="optionInventario">Inventario</a></li>
                 </ul>
             </li>
         </ul>
