solicitudes realizadas y recibidas

--- a/base/public/solicitudes_recibidas.html
+++ b/base/public/solicitudes_recibidas.html
@@ -76,7 +76,7 @@
             </div>
 
         </div>
-        <h1>Solicitudes Realizadas</h1>
+        <h1>Solicitudes Recibidas</h1>
 
         <div class=""> <a href="solicitudes_recibidas.html">Recibidas</a></div>
 
@@ -89,7 +89,7 @@
                     <th>Dueño</th>
                     <th>Fecha del intercambio</th>
                     <th>Sucursal del intercambio</th>
-                    <th>Estado</th>
+                    <th>Acciones</th>
                 </tr>
             </thead>
             <tbody>
@@ -176,7 +176,7 @@
     <script src="js/servicio_solicitud.js"></script>
     <script src="js/servicio_usuario.js"></script>
     <script src="js/controlador_cerrar_sesion.js"></script>
-    <script src="js/controlador_listar_solicitudes.js"></script>
+    <script src="js/controlador_listar_solicitudes_recibidas.js"></script>
     <script src="js/servicio_libro.js"></script>
     <script src="js/clienteIniciado.js"></script>
 
