--- a/base/public/enviar_solicitud_libreria.html
+++ b/base/public/enviar_solicitud_libreria.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Registrar Librería</title>
+    <title>Solicitud de Librería</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/enviar_solicitud_libreria.css">
     <link rel="stylesheet" href="css/navbar.css">
@@ -36,7 +36,7 @@
 
         <div class="pantalla_dividida2">
 
-            <h1>Registrar Librería</h1>
+            <h1>Solicitud de Librería</h1>
 
             <section id="datos_libreria">
 
@@ -134,11 +134,13 @@
 
             </section>
 
-            <button id="btn_registrar"> Registrar </button>
+            <button id="btn_registrar">Enviar</button>
 
         </div>
 
     </main>
+
+    <footer></footer>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
