--- a/base/public/listar_libros.html
+++ b/base/public/listar_libros.html
@@ -81,7 +81,7 @@
         <label for="txt_filtro">Filtrar</label>
         <input type="text" id="txt_filtro">
         
-        <a href="registrar_libro.html" id="btnNuevoLibro">Nuevo Libro</a>
+        <a class="button" href="registrar_libro.html">Registrar Libro</a>
 
         <table id="tbl_libros">
             <thead>
