--- a/base/public/modificar_libro.html
+++ b/base/public/modificar_libro.html
@@ -48,7 +48,7 @@
 
             <li class="parent" id="dropdown"><a href="#">Otros</a>
                 <ul class="child">
-                    <li><a href="listar_libros_intercambiables.html">Intercambios</a></li>
+                    <li><a href="intercambios.html">Intercambios</a></li>
                     <li id='optionUsers'><a href="listar-usuarios.html">Usuarios</a></li>
                     <li id='optionBitacora'><a href="#">Bitácora</a></li>
                     <li id='optionReportes'><a href="#">Reportes</a></li>
@@ -69,7 +69,7 @@
               <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
               <div class="optionProfile"><a href="">Mis compras</a></div>
               <div class="optionProfile"><a href="">Mis libros</a></div>
-              <div class="optionProfile"><a href="misintercambios.html">Mis intercambios</a></div>
+              <div class="optionProfile"><a href="">Mis intercambios</a></div>
               <button id="btn_cerrar">Cerrar Sesión</button>
           </div>
 
@@ -107,21 +107,18 @@
               <input id="txt_editorial" type="text">
             </div>
             <div id="lista_autores" class="listas">
-              <label for="txt_autor">Autor:</label>
+              <label for="slt_autor">Autor:</label>
               <select name="autor" id="slt_autor">
                 <!-- <option value=""></option> -->
                 <!-- <option>Autor 1</option>
                   <option>Autor 2</option>
                   <option>Autor 3</option> -->
-              <!-- </select> -->
               </select>
             </div>
-            
             <div>
               <label for="txt_anno_edicion">Año de edición:</label>
               <input id="txt_anno_edicion" type="number">
             </div>
-
             <div>
               <label for="idioma">Idioma:</label>
               <select name="idioma" id="txt_idioma">
