--- a/base/public/listar-autores.html
+++ b/base/public/listar-autores.html
@@ -169,6 +169,7 @@
 
     <script src="js/jquery-3.3.1.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/servicio-autor.js"></script>
     <script src="js/controlador-listar-autores.js"></script>
     <script src="js/getNombre.js"></script>
