--- a/base/public/reportes.html
+++ b/base/public/reportes.html
@@ -106,7 +106,7 @@
                 <tr>
                     <th>ISBN</th>
                     <th>Titulo</th>
-                    <th>Calificacion</th>
+                    <th>Calificacion Promedio</th>
                 </tr>
             </thead>
             <tbody>
@@ -201,7 +201,9 @@
 
     <script src="js/servicio_librosComprados.js"></script>
     <script src="js/servicio_libro.js"></script>
+    <script src="js/servicio_rating_usuario.js"></script>
     <script src="js/controlador_reportes.js"></script>
+    <script src="js/controlador_rating_usuario.js"></script>
 
 </body>
 
