ajuste en solicitudes recibidas

--- a/base/public/solicitudes_recibidas.html
+++ b/base/public/solicitudes_recibidas.html
@@ -86,7 +86,7 @@
             <thead>
                 <tr>
                     <th>Libro Solicitado</th>
-                    <th>Dueño</th>
+                    <th>Solicitante</th>
                     <th>Fecha del intercambio</th>
                     <th>Sucursal del intercambio</th>
                     <th>Acciones</th>
