--- a/base/public/modificar_categoria.html
+++ b/base/public/modificar_categoria.html
@@ -2,11 +2,9 @@
 <html lang="es">
 
 <head>
-
     <title>
-        Registrar Categoría
+        Modificar Categoría
     </title>
-
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,8 +12,7 @@
     <title>Modificar Categoría</title>
     <link rel="stylesheet" href="css/registrar_categoria.css">
     <link rel="stylesheet" href="css/navbar.css">
-
-
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 
 <body>
@@ -57,21 +54,88 @@
 
     <main>
 
-        <h1>Modificar Categoría</h1>
+        <div class="pantalla_dividida1">
 
-        <section id="nombre_categoria">
+        </div>
 
-            <h2>Datos de la Categoría</h2>
+        <div class="pantalla_dividida2">
 
-            <input id="txt_nombre_categoria" type="text" placeholder="Nombre Categoría">
+            <h1>Modificar Categoría</h1>
 
-        </section>
+            <section id="nombre_categoria">
 
-        <button type="button" class="boton_registrar" id="btn_registrar">Modificar</button>
+                <input id="txt_nombre_categoria" type="text" placeholder="Nombre Categoría">
 
-        <footer></footer>
+            </section>
+
+            <button type="button" class="boton_registrar" id="btn_registrar">Modificar</button>
+
+        </div>
+
 
     </main>
+
+    <section id="footer">
+
+        <div class="footerLogo">
+            <img src="imgs/panda_blanco.png" width="150px">
+        </div>
+        <div class="footermap">
+
+            <div class="list">
+                <ul>
+                    <li class="uhead"><a href=""><span>Librerías</span></a></li>
+                    <ul>
+                        <li><a href="">Ver las librerías</a></li>
+                        <li><a href="registrar_libreria.html">Registrar mi librería</a></li>
+                        <li><a href="">Sucursales</a></li>
+                        <li><a href="">Ofertas</a></li>
+                    </ul>
+                </ul>
+
+            </div>
+
+            <div class="list">
+
+                <ul>
+                    <li class="uhead"><a href=""><span>Libros</span></a></li>
+                    <ul>
+                        <li><a href="">Ver todos los libros</a></li>
+                        <li><a href="">Categorías</a></li>
+                        <li><a href="">Géneros</a></li>
+                        <li><a href="">Más Vendidos</a></li>
+                        <li><a href="">Mejor Calificados</a></li>
+                    </ul>
+                </ul>
+            </div>
+
+            <div class="list">
+                <ul>
+                    <li class="uhead"><a href=""><span>Clubes de Lectura</span></a></li>
+                    <ul>
+                        <li><a href="">Ver los clubes</a></li>
+                        <li><a href="">Crear mi club</a></li>
+                        <li><a href="">Unirme a un club</a></li>
+                        <li><a href="">Ver mis clubes</a></li>
+                    </ul>
+                </ul>
+            </div>
+        </div>
+
+        <div class="socials">
+
+            <img src="https://img.icons8.com/ios-filled/40/ffffff/horizontal-line.png">
+
+            <img src="https://img.icons8.com/ios-filled/40/ffffff/facebook-new.png">
+
+            <img src="https://img.icons8.com/ios-filled/40/ffffff/instagram-new.png">
+
+            <img src="https://img.icons8.com/windows/40/ffffff/twitter.png">
+
+            <img src="https://img.icons8.com/ios-filled/40/ffffff/horizontal-line.png">
+
+        </div>
+    </section>
 
 
     <script src="js/jquery-3.3.1.js"></script>
