--- a/base/public/inicioCliente.html
+++ b/base/public/inicioCliente.html
@@ -47,7 +47,7 @@
             </li>
             <li class="parent"><a href="listar_librerias.html" id="optionlibrerias">Librerías</a>
                 <ul class="child">
-                    <li id="optionSucursales"><a href="listar_sucursales.html ">Sucursales</a></li>
+                    <li ><a id='optionSucursales' href="listar_sucursales.html ">Sucursales</a></li>
                 </ul>
             </li>
 
